# pipecat-adk

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: basic_chatbot.py
examples/assistant/: README.md  agent.py  bot.py  requirements.txt  run.py
src/pipecat_adk/: __init__.py  context_aggregators.py  frames.py  llm_service.py  plugin.py  request_processors.py  types.py
tests/: CLAUDE.md  __init__.py  debug_observer.py  mocks.py  test_aggregator_edge_cases.py  test_assistant_context_aggregator.py  test_context_aggregator.py  test_integration.py  test_llm_service.py  test_plugin.py  test_save_immediately.py  test_state_sync.py  test_utils.py  test_with_mocks.py
